// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Click Event 1`] = `
<div
  className="max-w-sm mx-auto mt-32"
>
  <div
    className="flex items-center justify-center"
  >
    <span
      className="inline-flex rounded-md shadow-sm"
    >
      <button
        className="inline-flex items-center py-2 border border-transparent text-sm font-medium rounded-md text-white focus:outline-none focus:border-indigo-700 focus:shadow-outline-indigo active:bg-indigo-700 transition ease-in-out duration-150 bg-indigo-600 hover:bg-indigo-500 active:bg-indigo-700 px-4 leading-5"
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": null,
          }
        }
        type="button"
      >
        Prepare to be surprised
      </button>
    </span>
  </div>
</div>
`;

exports[`Storyshots Button Default 1`] = `
<div
  className="max-w-sm mx-auto mt-32"
>
  <div
    className="flex items-center justify-center"
  >
    <span
      className="inline-flex rounded-md shadow-sm"
    >
      <button
        className="inline-flex items-center py-2 border border-transparent text-sm font-medium rounded-md text-white focus:outline-none focus:border-indigo-700 focus:shadow-outline-indigo active:bg-indigo-700 transition ease-in-out duration-150 bg-indigo-600 hover:bg-indigo-500 active:bg-indigo-700 px-4 leading-5"
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": null,
          }
        }
        type="button"
      >
        Medium Button
      </button>
    </span>
  </div>
</div>
`;

exports[`Storyshots Button Secondary 1`] = `
<div
  className="max-w-sm mx-auto mt-32"
>
  <div
    className="flex items-center justify-center"
  >
    <span
      className="inline-flex rounded-md shadow-sm"
    >
      <button
        className="inline-flex items-center py-2 border border-gray-300 text-sm font-medium rounded-md text-gray-700 bg-white hover:text-gray-500 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue active:text-gray-800 active:bg-gray-50 transition ease-in-out duration-150 px-4 leading-5"
        onClick={[Function]}
        style={
          Object {
            "borderColor": null,
            "color": null,
          }
        }
        type="button"
      >
        Secondary Button
      </button>
    </span>
  </div>
</div>
`;

exports[`Storyshots Button Small 1`] = `
<div
  className="max-w-sm mx-auto mt-32"
>
  <div
    className="flex items-center justify-center"
  >
    <span
      className="inline-flex rounded-md shadow-sm"
    >
      <button
        className="inline-flex items-center py-2 border border-transparent text-sm font-medium rounded-md text-white focus:outline-none focus:border-indigo-700 focus:shadow-outline-indigo active:bg-indigo-700 transition ease-in-out duration-150 bg-indigo-600 hover:bg-indigo-500 active:bg-indigo-700 px-3 leading-4"
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": null,
          }
        }
        type="button"
      >
        Small Button
      </button>
    </span>
  </div>
</div>
`;

exports[`Storyshots Card Default 1`] = `
<div
  className="mx-auto max-w-sm mt-32"
>
  <div
    className="flex flex-col bg-white rounded-lg shadow text-center"
  >
    <div
      className="flex-1 flex flex-col p-8"
    >
      <img
        alt=""
        className="w-32 h-32 flex-shrink-0 mx-auto rounded-full"
        src="https://eu.ui-avatars.com/api/?background=random&size=512&name=Dwight+Schrute"
      />
      <h3
        className="mt-6 text-gray-900 text-sm leading-5 font-medium"
      >
        Dwight Schrute
      </h3>
      <dl
        className="mt-1 flex-grow flex flex-col justify-between"
      >
        <dt
          className="sr-only"
        >
          Title
        </dt>
        <dd
          className="text-gray-500 text-sm leading-5"
        >
          Assistant Regional Manager
        </dd>
        <dt
          className="sr-only"
        >
          Role
        </dt>
        <dd
          className="mt-3"
        >
          <span
            className="px-2 py-1 text-teal-800 text-xs leading-4 font-medium bg-teal-100 rounded-full"
          >
            admin
          </span>
        </dd>
      </dl>
    </div>
    <div
      className="border-t border-gray-200"
    >
      <div
        className="-mt-px flex"
      >
        <div
          className="w-0 flex-1 flex border-r border-gray-200"
        >
          <a
            className="relative -mr-px w-0 flex-1 inline-flex items-center justify-center py-4 text-sm leading-5 text-gray-700 font-medium border border-transparent rounded-bl-lg hover:text-gray-500 focus:outline-none focus:shadow-outline-blue focus:border-blue-300 focus:z-10 transition ease-in-out duration-150"
            href="/"
          >
            <svg
              className="w-5 h-5 text-gray-400"
              fill="currentColor"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z"
              />
              <path
                d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z"
              />
            </svg>
            <span
              className="ml-3"
            >
              Email
            </span>
          </a>
        </div>
        <div
          className="-ml-px w-0 flex-1 flex"
        >
          <a
            className="relative w-0 flex-1 inline-flex items-center justify-center py-4 text-sm leading-5 text-gray-700 font-medium border border-transparent rounded-br-lg hover:text-gray-500 focus:outline-none focus:shadow-outline-blue focus:border-blue-300 focus:z-10 transition ease-in-out duration-150"
            href="/"
          >
            <svg
              className="w-5 h-5 text-gray-400"
              fill="currentColor"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M2 3a1 1 0 011-1h2.153a1 1 0 01.986.836l.74 4.435a1 1 0 01-.54 1.06l-1.548.773a11.037 11.037 0 006.105 6.105l.774-1.548a1 1 0 011.059-.54l4.435.74a1 1 0 01.836.986V17a1 1 0 01-1 1h-2C7.82 18 2 12.18 2 5V3z"
              />
            </svg>
            <span
              className="ml-3"
            >
              Call
            </span>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Cards Grid Default 1`] = `
<div
  className="max-w-6xl mx-auto mt-32"
>
  <ul
    class="grid grid-cols-1 gap-6 md:grid-cols-2 lg:grid-cols-3"
  >
    <li
      className="col-span-1"
    >
      <div
        className="flex flex-col bg-white rounded-lg shadow text-center"
      >
        <div
          className="flex-1 flex flex-col p-8"
        >
          <img
            alt=""
            className="w-32 h-32 flex-shrink-0 mx-auto rounded-full"
            src="https://eu.ui-avatars.com/api/?background=random&size=512&name=Dwight+Schrute"
          />
          <h3
            className="mt-6 text-gray-900 text-sm leading-5 font-medium"
          >
            Dwight Schrute
          </h3>
          <dl
            className="mt-1 flex-grow flex flex-col justify-between"
          >
            <dt
              className="sr-only"
            >
              Title
            </dt>
            <dd
              className="text-gray-500 text-sm leading-5"
            >
              Assistant Regional Manager
            </dd>
            <dt
              className="sr-only"
            >
              Role
            </dt>
            <dd
              className="mt-3"
            >
              <span
                className="px-2 py-1 text-teal-800 text-xs leading-4 font-medium bg-teal-100 rounded-full"
              >
                admin
              </span>
            </dd>
          </dl>
        </div>
        <div
          className="border-t border-gray-200"
        >
          <div
            className="-mt-px flex"
          >
            <div
              className="w-0 flex-1 flex border-r border-gray-200"
            >
              <a
                className="relative -mr-px w-0 flex-1 inline-flex items-center justify-center py-4 text-sm leading-5 text-gray-700 font-medium border border-transparent rounded-bl-lg hover:text-gray-500 focus:outline-none focus:shadow-outline-blue focus:border-blue-300 focus:z-10 transition ease-in-out duration-150"
                href="/"
              >
                <svg
                  className="w-5 h-5 text-gray-400"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z"
                  />
                  <path
                    d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z"
                  />
                </svg>
                <span
                  className="ml-3"
                >
                  Email
                </span>
              </a>
            </div>
            <div
              className="-ml-px w-0 flex-1 flex"
            >
              <a
                className="relative w-0 flex-1 inline-flex items-center justify-center py-4 text-sm leading-5 text-gray-700 font-medium border border-transparent rounded-br-lg hover:text-gray-500 focus:outline-none focus:shadow-outline-blue focus:border-blue-300 focus:z-10 transition ease-in-out duration-150"
                href="/"
              >
                <svg
                  className="w-5 h-5 text-gray-400"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M2 3a1 1 0 011-1h2.153a1 1 0 01.986.836l.74 4.435a1 1 0 01-.54 1.06l-1.548.773a11.037 11.037 0 006.105 6.105l.774-1.548a1 1 0 011.059-.54l4.435.74a1 1 0 01.836.986V17a1 1 0 01-1 1h-2C7.82 18 2 12.18 2 5V3z"
                  />
                </svg>
                <span
                  className="ml-3"
                >
                  Call
                </span>
              </a>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      className="col-span-1"
    >
      <div
        className="flex flex-col bg-white rounded-lg shadow text-center"
      >
        <div
          className="flex-1 flex flex-col p-8"
        >
          <img
            alt=""
            className="w-32 h-32 flex-shrink-0 mx-auto rounded-full"
            src="https://eu.ui-avatars.com/api/?background=random&size=512&name=Jim+Halpert"
          />
          <h3
            className="mt-6 text-gray-900 text-sm leading-5 font-medium"
          >
            Jim Halpert
          </h3>
          <dl
            className="mt-1 flex-grow flex flex-col justify-between"
          >
            <dt
              className="sr-only"
            >
              Title
            </dt>
            <dd
              className="text-gray-500 text-sm leading-5"
            >
              Salesman
            </dd>
            <dt
              className="sr-only"
            >
              Role
            </dt>
            <dd
              className="mt-3"
            >
              <span
                className="px-2 py-1 text-teal-800 text-xs leading-4 font-medium bg-teal-100 rounded-full"
              >
                editor
              </span>
            </dd>
          </dl>
        </div>
        <div
          className="border-t border-gray-200"
        >
          <div
            className="-mt-px flex"
          >
            <div
              className="w-0 flex-1 flex border-r border-gray-200"
            >
              <a
                className="relative -mr-px w-0 flex-1 inline-flex items-center justify-center py-4 text-sm leading-5 text-gray-700 font-medium border border-transparent rounded-bl-lg hover:text-gray-500 focus:outline-none focus:shadow-outline-blue focus:border-blue-300 focus:z-10 transition ease-in-out duration-150"
                href="/"
              >
                <svg
                  className="w-5 h-5 text-gray-400"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z"
                  />
                  <path
                    d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z"
                  />
                </svg>
                <span
                  className="ml-3"
                >
                  Email
                </span>
              </a>
            </div>
            <div
              className="-ml-px w-0 flex-1 flex"
            >
              <a
                className="relative w-0 flex-1 inline-flex items-center justify-center py-4 text-sm leading-5 text-gray-700 font-medium border border-transparent rounded-br-lg hover:text-gray-500 focus:outline-none focus:shadow-outline-blue focus:border-blue-300 focus:z-10 transition ease-in-out duration-150"
                href="/"
              >
                <svg
                  className="w-5 h-5 text-gray-400"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M2 3a1 1 0 011-1h2.153a1 1 0 01.986.836l.74 4.435a1 1 0 01-.54 1.06l-1.548.773a11.037 11.037 0 006.105 6.105l.774-1.548a1 1 0 011.059-.54l4.435.74a1 1 0 01.836.986V17a1 1 0 01-1 1h-2C7.82 18 2 12.18 2 5V3z"
                  />
                </svg>
                <span
                  className="ml-3"
                >
                  Call
                </span>
              </a>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      className="col-span-1"
    >
      <div
        className="flex flex-col bg-white rounded-lg shadow text-center"
      >
        <div
          className="flex-1 flex flex-col p-8"
        >
          <img
            alt=""
            className="w-32 h-32 flex-shrink-0 mx-auto rounded-full"
            src="https://eu.ui-avatars.com/api/?background=random&size=512&name=Pamela+Beesly"
          />
          <h3
            className="mt-6 text-gray-900 text-sm leading-5 font-medium"
          >
            Pamela Beesly
          </h3>
          <dl
            className="mt-1 flex-grow flex flex-col justify-between"
          >
            <dt
              className="sr-only"
            >
              Title
            </dt>
            <dd
              className="text-gray-500 text-sm leading-5"
            >
              Receptionist
            </dd>
            <dt
              className="sr-only"
            >
              Role
            </dt>
            <dd
              className="mt-3"
            >
              <span
                className="px-2 py-1 text-teal-800 text-xs leading-4 font-medium bg-teal-100 rounded-full"
              >
                admin
              </span>
            </dd>
          </dl>
        </div>
        <div
          className="border-t border-gray-200"
        >
          <div
            className="-mt-px flex"
          >
            <div
              className="w-0 flex-1 flex border-r border-gray-200"
            >
              <a
                className="relative -mr-px w-0 flex-1 inline-flex items-center justify-center py-4 text-sm leading-5 text-gray-700 font-medium border border-transparent rounded-bl-lg hover:text-gray-500 focus:outline-none focus:shadow-outline-blue focus:border-blue-300 focus:z-10 transition ease-in-out duration-150"
                href="/"
              >
                <svg
                  className="w-5 h-5 text-gray-400"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z"
                  />
                  <path
                    d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z"
                  />
                </svg>
                <span
                  className="ml-3"
                >
                  Email
                </span>
              </a>
            </div>
            <div
              className="-ml-px w-0 flex-1 flex"
            >
              <a
                className="relative w-0 flex-1 inline-flex items-center justify-center py-4 text-sm leading-5 text-gray-700 font-medium border border-transparent rounded-br-lg hover:text-gray-500 focus:outline-none focus:shadow-outline-blue focus:border-blue-300 focus:z-10 transition ease-in-out duration-150"
                href="/"
              >
                <svg
                  className="w-5 h-5 text-gray-400"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M2 3a1 1 0 011-1h2.153a1 1 0 01.986.836l.74 4.435a1 1 0 01-.54 1.06l-1.548.773a11.037 11.037 0 006.105 6.105l.774-1.548a1 1 0 011.059-.54l4.435.74a1 1 0 01.836.986V17a1 1 0 01-1 1h-2C7.82 18 2 12.18 2 5V3z"
                  />
                </svg>
                <span
                  className="ml-3"
                >
                  Call
                </span>
              </a>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      className="col-span-1"
    >
      <div
        className="flex flex-col bg-white rounded-lg shadow text-center"
      >
        <div
          className="flex-1 flex flex-col p-8"
        >
          <img
            alt=""
            className="w-32 h-32 flex-shrink-0 mx-auto rounded-full"
            src="https://eu.ui-avatars.com/api/?background=random&size=512&name=Michael+Scott"
          />
          <h3
            className="mt-6 text-gray-900 text-sm leading-5 font-medium"
          >
            Michael Scott
          </h3>
          <dl
            className="mt-1 flex-grow flex flex-col justify-between"
          >
            <dt
              className="sr-only"
            >
              Title
            </dt>
            <dd
              className="text-gray-500 text-sm leading-5"
            >
              Regional Manager
            </dd>
            <dt
              className="sr-only"
            >
              Role
            </dt>
            <dd
              className="mt-3"
            >
              <span
                className="px-2 py-1 text-teal-800 text-xs leading-4 font-medium bg-teal-100 rounded-full"
              >
                reader
              </span>
            </dd>
          </dl>
        </div>
        <div
          className="border-t border-gray-200"
        >
          <div
            className="-mt-px flex"
          >
            <div
              className="w-0 flex-1 flex border-r border-gray-200"
            >
              <a
                className="relative -mr-px w-0 flex-1 inline-flex items-center justify-center py-4 text-sm leading-5 text-gray-700 font-medium border border-transparent rounded-bl-lg hover:text-gray-500 focus:outline-none focus:shadow-outline-blue focus:border-blue-300 focus:z-10 transition ease-in-out duration-150"
                href="/"
              >
                <svg
                  className="w-5 h-5 text-gray-400"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z"
                  />
                  <path
                    d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z"
                  />
                </svg>
                <span
                  className="ml-3"
                >
                  Email
                </span>
              </a>
            </div>
            <div
              className="-ml-px w-0 flex-1 flex"
            >
              <a
                className="relative w-0 flex-1 inline-flex items-center justify-center py-4 text-sm leading-5 text-gray-700 font-medium border border-transparent rounded-br-lg hover:text-gray-500 focus:outline-none focus:shadow-outline-blue focus:border-blue-300 focus:z-10 transition ease-in-out duration-150"
                href="/"
              >
                <svg
                  className="w-5 h-5 text-gray-400"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M2 3a1 1 0 011-1h2.153a1 1 0 01.986.836l.74 4.435a1 1 0 01-.54 1.06l-1.548.773a11.037 11.037 0 006.105 6.105l.774-1.548a1 1 0 011.059-.54l4.435.74a1 1 0 01.836.986V17a1 1 0 01-1 1h-2C7.82 18 2 12.18 2 5V3z"
                  />
                </svg>
                <span
                  className="ml-3"
                >
                  Call
                </span>
              </a>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      className="col-span-1"
    >
      <div
        className="flex flex-col bg-white rounded-lg shadow text-center"
      >
        <div
          className="flex-1 flex flex-col p-8"
        >
          <img
            alt=""
            className="w-32 h-32 flex-shrink-0 mx-auto rounded-full"
            src="https://eu.ui-avatars.com/api/?background=random&size=512&name=Toby+Flenderson"
          />
          <h3
            className="mt-6 text-gray-900 text-sm leading-5 font-medium"
          >
            Toby Flenderson
          </h3>
          <dl
            className="mt-1 flex-grow flex flex-col justify-between"
          >
            <dt
              className="sr-only"
            >
              Title
            </dt>
            <dd
              className="text-gray-500 text-sm leading-5"
            >
              HR Manager
            </dd>
            <dt
              className="sr-only"
            >
              Role
            </dt>
            <dd
              className="mt-3"
            >
              <span
                className="px-2 py-1 text-teal-800 text-xs leading-4 font-medium bg-teal-100 rounded-full"
              >
                ...
              </span>
            </dd>
          </dl>
        </div>
        <div
          className="border-t border-gray-200"
        >
          <div
            className="-mt-px flex"
          >
            <div
              className="w-0 flex-1 flex border-r border-gray-200"
            >
              <a
                className="relative -mr-px w-0 flex-1 inline-flex items-center justify-center py-4 text-sm leading-5 text-gray-700 font-medium border border-transparent rounded-bl-lg hover:text-gray-500 focus:outline-none focus:shadow-outline-blue focus:border-blue-300 focus:z-10 transition ease-in-out duration-150"
                href="/"
              >
                <svg
                  className="w-5 h-5 text-gray-400"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z"
                  />
                  <path
                    d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z"
                  />
                </svg>
                <span
                  className="ml-3"
                >
                  Email
                </span>
              </a>
            </div>
            <div
              className="-ml-px w-0 flex-1 flex"
            >
              <a
                className="relative w-0 flex-1 inline-flex items-center justify-center py-4 text-sm leading-5 text-gray-700 font-medium border border-transparent rounded-br-lg hover:text-gray-500 focus:outline-none focus:shadow-outline-blue focus:border-blue-300 focus:z-10 transition ease-in-out duration-150"
                href="/"
              >
                <svg
                  className="w-5 h-5 text-gray-400"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M2 3a1 1 0 011-1h2.153a1 1 0 01.986.836l.74 4.435a1 1 0 01-.54 1.06l-1.548.773a11.037 11.037 0 006.105 6.105l.774-1.548a1 1 0 011.059-.54l4.435.74a1 1 0 01.836.986V17a1 1 0 01-1 1h-2C7.82 18 2 12.18 2 5V3z"
                  />
                </svg>
                <span
                  className="ml-3"
                >
                  Call
                </span>
              </a>
            </div>
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Cards Grid Empty List 1`] = `
<div
  className="max-w-6xl mx-auto mt-32"
>
  <div
    className="flex flex-col items-center justify-center space-y-3 text-gray-700"
  >
    <svg
      className="w-20 h-20"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={2}
      />
    </svg>
    <p
      className="text-xl"
    >
      No profiles are currently available
    </p>
  </div>
</div>
`;

exports[`Storyshots Cards Grid Loading 1`] = `
<div
  className="max-w-6xl mx-auto mt-32"
>
  <div
    className="flex flex-col items-center justify-center text-gray-700"
  >
    <div
      aria-busy="true"
      className=""
      style={Object {}}
    >
      <svg
        aria-label="audio-loading"
        fill="#4A5568"
        height={80}
        viewBox="0 0 120 30"
        width={80}
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="15"
          cy="15"
          r={15}
        >
          <animate
            attributeName="r"
            begin="0s"
            calcMode="linear"
            dur="0.8s"
            from="15"
            repeatCount="indefinite"
            to="15"
            values="15;9;15"
          />
          <animate
            attributeName="fillOpacity"
            begin="0s"
            calcMode="linear"
            dur="0.8s"
            from="1"
            repeatCount="indefinite"
            to="1"
            values="1;.5;1"
          />
        </circle>
        <circle
          attributeName="fillOpacity"
          cx="60"
          cy="15"
          from="1"
          r={9}
          to="0.3"
        >
          <animate
            attributeName="r"
            begin="0s"
            calcMode="linear"
            dur="0.8s"
            from="9"
            repeatCount="indefinite"
            to="9"
            values="9;15;9"
          />
          <animate
            attributeName="fillOpacity"
            begin="0s"
            calcMode="linear"
            dur="0.8s"
            from="0.5"
            repeatCount="indefinite"
            to="0.5"
            values=".5;1;.5"
          />
        </circle>
        <circle
          cx="105"
          cy="15"
          r={15}
        >
          <animate
            attributeName="r"
            begin="0s"
            calcMode="linear"
            dur="0.8s"
            from="15"
            repeatCount="indefinite"
            to="15"
            values="15;9;15"
          />
          <animate
            attributeName="fillOpacity"
            begin="0s"
            calcMode="linear"
            dur="0.8s"
            from="1"
            repeatCount="indefinite"
            to="1"
            values="1;.5;1"
          />
        </circle>
      </svg>
    </div>
    <p
      className="text-xl"
    >
      Loading
    </p>
  </div>
</div>
`;

exports[`Storyshots List Default 1`] = `
<div
  className="max-w-6xl mx-auto mt-32"
>
  <div
    className="flex flex-col"
  >
    <div
      className="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8"
    >
      <div
        className="inline-block min-w-full py-2 align-middle sm:px-6 lg:px-8"
      >
        <div
          className="overflow-hidden border-b border-gray-200 shadow sm:rounded-lg"
        >
          <table
            className="min-w-full divide-y divide-gray-200"
          >
            <thead>
              <tr>
                <th
                  className="px-6 py-3 text-xs font-medium leading-4 tracking-wider text-left text-gray-500 uppercase bg-white"
                >
                  Name
                </th>
                <th
                  className="px-6 py-3 text-xs font-medium leading-4 tracking-wider text-left text-gray-500 uppercase bg-white"
                >
                  Title
                </th>
                <th
                  className="px-6 py-3 text-xs font-medium leading-4 tracking-wider text-left text-gray-500 uppercase bg-white"
                >
                  Role
                </th>
                <th
                  className="px-6 py-3 bg-white"
                />
              </tr>
            </thead>
            <tbody>
              <tr
                className="bg-white"
              >
                <td
                  className="px-6 py-4 text-sm font-medium leading-5 text-gray-900 whitespace-no-wrap"
                >
                  Dwight Schrute
                </td>
                <td
                  className="px-6 py-4 text-sm leading-5 text-gray-500 whitespace-no-wrap"
                >
                  Assistant Regional Manager
                </td>
                <td
                  className="px-6 py-4 text-sm leading-5 text-gray-500 whitespace-no-wrap"
                >
                  <input
                    onChange={[Function]}
                    readOnly={true}
                    type="text"
                    value="admin"
                  />
                </td>
                <td
                  className="px-6 py-4 text-sm font-medium leading-5 text-right whitespace-no-wrap"
                >
                  <span
                    className="inline-flex rounded-md shadow-sm"
                  >
                    <button
                      className="inline-flex items-center py-2 border border-gray-300 text-sm font-medium rounded-md text-gray-700 bg-white hover:text-gray-500 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue active:text-gray-800 active:bg-gray-50 transition ease-in-out duration-150 px-3 leading-4"
                      onClick={[Function]}
                      style={
                        Object {
                          "borderColor": null,
                          "color": null,
                        }
                      }
                      type="button"
                    >
                      Edit Role
                    </button>
                  </span>
                </td>
              </tr>
              <tr
                className="bg-white"
              >
                <td
                  className="px-6 py-4 text-sm font-medium leading-5 text-gray-900 whitespace-no-wrap"
                >
                  Jim Halpert
                </td>
                <td
                  className="px-6 py-4 text-sm leading-5 text-gray-500 whitespace-no-wrap"
                >
                  Salesman
                </td>
                <td
                  className="px-6 py-4 text-sm leading-5 text-gray-500 whitespace-no-wrap"
                >
                  <input
                    onChange={[Function]}
                    readOnly={true}
                    type="text"
                    value="editor"
                  />
                </td>
                <td
                  className="px-6 py-4 text-sm font-medium leading-5 text-right whitespace-no-wrap"
                >
                  <span
                    className="inline-flex rounded-md shadow-sm"
                  >
                    <button
                      className="inline-flex items-center py-2 border border-gray-300 text-sm font-medium rounded-md text-gray-700 bg-white hover:text-gray-500 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue active:text-gray-800 active:bg-gray-50 transition ease-in-out duration-150 px-3 leading-4"
                      onClick={[Function]}
                      style={
                        Object {
                          "borderColor": null,
                          "color": null,
                        }
                      }
                      type="button"
                    >
                      Edit Role
                    </button>
                  </span>
                </td>
              </tr>
              <tr
                className="bg-white"
              >
                <td
                  className="px-6 py-4 text-sm font-medium leading-5 text-gray-900 whitespace-no-wrap"
                >
                  Pamela Beesly
                </td>
                <td
                  className="px-6 py-4 text-sm leading-5 text-gray-500 whitespace-no-wrap"
                >
                  Receptionist
                </td>
                <td
                  className="px-6 py-4 text-sm leading-5 text-gray-500 whitespace-no-wrap"
                >
                  <input
                    onChange={[Function]}
                    readOnly={true}
                    type="text"
                    value="admin"
                  />
                </td>
                <td
                  className="px-6 py-4 text-sm font-medium leading-5 text-right whitespace-no-wrap"
                >
                  <span
                    className="inline-flex rounded-md shadow-sm"
                  >
                    <button
                      className="inline-flex items-center py-2 border border-gray-300 text-sm font-medium rounded-md text-gray-700 bg-white hover:text-gray-500 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue active:text-gray-800 active:bg-gray-50 transition ease-in-out duration-150 px-3 leading-4"
                      onClick={[Function]}
                      style={
                        Object {
                          "borderColor": null,
                          "color": null,
                        }
                      }
                      type="button"
                    >
                      Edit Role
                    </button>
                  </span>
                </td>
              </tr>
              <tr
                className="bg-white"
              >
                <td
                  className="px-6 py-4 text-sm font-medium leading-5 text-gray-900 whitespace-no-wrap"
                >
                  Michael Scott
                </td>
                <td
                  className="px-6 py-4 text-sm leading-5 text-gray-500 whitespace-no-wrap"
                >
                  Regional Manager
                </td>
                <td
                  className="px-6 py-4 text-sm leading-5 text-gray-500 whitespace-no-wrap"
                >
                  <input
                    onChange={[Function]}
                    readOnly={true}
                    type="text"
                    value="reader"
                  />
                </td>
                <td
                  className="px-6 py-4 text-sm font-medium leading-5 text-right whitespace-no-wrap"
                >
                  <span
                    className="inline-flex rounded-md shadow-sm"
                  >
                    <button
                      className="inline-flex items-center py-2 border border-gray-300 text-sm font-medium rounded-md text-gray-700 bg-white hover:text-gray-500 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue active:text-gray-800 active:bg-gray-50 transition ease-in-out duration-150 px-3 leading-4"
                      onClick={[Function]}
                      style={
                        Object {
                          "borderColor": null,
                          "color": null,
                        }
                      }
                      type="button"
                    >
                      Edit Role
                    </button>
                  </span>
                </td>
              </tr>
              <tr
                className="bg-white"
              >
                <td
                  className="px-6 py-4 text-sm font-medium leading-5 text-gray-900 whitespace-no-wrap"
                >
                  Toby Flenderson
                </td>
                <td
                  className="px-6 py-4 text-sm leading-5 text-gray-500 whitespace-no-wrap"
                >
                  HR Manager
                </td>
                <td
                  className="px-6 py-4 text-sm leading-5 text-gray-500 whitespace-no-wrap"
                >
                  <input
                    onChange={[Function]}
                    readOnly={true}
                    type="text"
                    value="..."
                  />
                </td>
                <td
                  className="px-6 py-4 text-sm font-medium leading-5 text-right whitespace-no-wrap"
                >
                  <span
                    className="inline-flex rounded-md shadow-sm"
                  >
                    <button
                      className="inline-flex items-center py-2 border border-gray-300 text-sm font-medium rounded-md text-gray-700 bg-white hover:text-gray-500 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue active:text-gray-800 active:bg-gray-50 transition ease-in-out duration-150 px-3 leading-4"
                      onClick={[Function]}
                      style={
                        Object {
                          "borderColor": null,
                          "color": null,
                        }
                      }
                      type="button"
                    >
                      Edit Role
                    </button>
                  </span>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots List Empty List 1`] = `
<div
  className="max-w-6xl mx-auto mt-32"
>
  <div
    className="flex flex-col"
  >
    <div
      className="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8"
    >
      <div
        className="inline-block min-w-full py-2 align-middle sm:px-6 lg:px-8"
      >
        <div
          className="overflow-hidden border-b border-gray-200 shadow sm:rounded-lg"
        >
          <table
            className="min-w-full divide-y divide-gray-200"
          >
            <thead>
              <tr>
                <th
                  className="px-6 py-3 text-xs font-medium leading-4 tracking-wider text-left text-gray-500 uppercase bg-white"
                >
                  Name
                </th>
                <th
                  className="px-6 py-3 text-xs font-medium leading-4 tracking-wider text-left text-gray-500 uppercase bg-white"
                >
                  Title
                </th>
                <th
                  className="px-6 py-3 text-xs font-medium leading-4 tracking-wider text-left text-gray-500 uppercase bg-white"
                >
                  Role
                </th>
                <th
                  className="px-6 py-3 bg-white"
                />
              </tr>
            </thead>
            <tbody>
              <tr
                className="bg-white"
              >
                <td
                  className="px-6 py-4 text-sm font-medium leading-5 text-gray-500 whitespace-no-wrap"
                  colspan="4"
                >
                  <div
                    className="flex flex-col items-center space-y-3"
                  >
                    <svg
                      className="w-12 h-12"
                      fill="none"
                      stroke="currentColor"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
                        strokeLinecap="round"
                        strokeLinejoin="round"
                        strokeWidth={1}
                      />
                    </svg>
                    <p
                      className="text-md"
                    >
                      No profiles are currently available
                    </p>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots List Item Default 1`] = `
<div
  className="flex justify-center max-w-6xl mx-auto mt-32"
>
  <div
    className="shadow-md"
  >
    <tr
      className="bg-white"
    >
      <td
        className="px-6 py-4 text-sm font-medium leading-5 text-gray-900 whitespace-no-wrap"
      >
        Dwight Schrute
      </td>
      <td
        className="px-6 py-4 text-sm leading-5 text-gray-500 whitespace-no-wrap"
      >
        Assistant Regional Manager
      </td>
      <td
        className="px-6 py-4 text-sm leading-5 text-gray-500 whitespace-no-wrap"
      >
        <input
          onChange={[Function]}
          readOnly={true}
          type="text"
          value="admin"
        />
      </td>
      <td
        className="px-6 py-4 text-sm font-medium leading-5 text-right whitespace-no-wrap"
      >
        <span
          className="inline-flex rounded-md shadow-sm"
        >
          <button
            className="inline-flex items-center py-2 border border-gray-300 text-sm font-medium rounded-md text-gray-700 bg-white hover:text-gray-500 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue active:text-gray-800 active:bg-gray-50 transition ease-in-out duration-150 px-3 leading-4"
            onClick={[Function]}
            style={
              Object {
                "borderColor": null,
                "color": null,
              }
            }
            type="button"
          >
            Edit Role
          </button>
        </span>
      </td>
    </tr>
  </div>
</div>
`;

exports[`Storyshots List Loading 1`] = `
<div
  className="max-w-6xl mx-auto mt-32"
>
  <div
    className="flex flex-col items-center justify-center text-gray-700"
  >
    <div
      aria-busy="true"
      className=""
      style={Object {}}
    >
      <svg
        aria-label="audio-loading"
        fill="#4A5568"
        height={80}
        viewBox="0 0 120 30"
        width={80}
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="15"
          cy="15"
          r={15}
        >
          <animate
            attributeName="r"
            begin="0s"
            calcMode="linear"
            dur="0.8s"
            from="15"
            repeatCount="indefinite"
            to="15"
            values="15;9;15"
          />
          <animate
            attributeName="fillOpacity"
            begin="0s"
            calcMode="linear"
            dur="0.8s"
            from="1"
            repeatCount="indefinite"
            to="1"
            values="1;.5;1"
          />
        </circle>
        <circle
          attributeName="fillOpacity"
          cx="60"
          cy="15"
          from="1"
          r={9}
          to="0.3"
        >
          <animate
            attributeName="r"
            begin="0s"
            calcMode="linear"
            dur="0.8s"
            from="9"
            repeatCount="indefinite"
            to="9"
            values="9;15;9"
          />
          <animate
            attributeName="fillOpacity"
            begin="0s"
            calcMode="linear"
            dur="0.8s"
            from="0.5"
            repeatCount="indefinite"
            to="0.5"
            values=".5;1;.5"
          />
        </circle>
        <circle
          cx="105"
          cy="15"
          r={15}
        >
          <animate
            attributeName="r"
            begin="0s"
            calcMode="linear"
            dur="0.8s"
            from="15"
            repeatCount="indefinite"
            to="15"
            values="15;9;15"
          />
          <animate
            attributeName="fillOpacity"
            begin="0s"
            calcMode="linear"
            dur="0.8s"
            from="1"
            repeatCount="indefinite"
            to="1"
            values="1;.5;1"
          />
        </circle>
      </svg>
    </div>
    <p
      className="text-xl"
    >
      Loading
    </p>
  </div>
</div>
`;
